@@ -1,3 +1,10 @@
+2009-03-20  Michal Ludvig  <michal@logix.cz>
+
+	* S3/S3.py: Re-sign requests before retrial to avoid 
+	  RequestTimeTooSkewed errors on failed long-running
+	  uploads.
+	  BTW 'request' now has its own class S3Request.
+
 2009-03-04  Michal Ludvig  <michal@logix.cz>
 
 	* s3cmd, S3/Config.py, S3/S3.py: Support for --verbatim.
